[tool.poetry]
name = "probreg"
version = "0.3.1"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pybind11 = "^2.6.2"
six = "^1.15.0"
transformations = "^2020.1.1"
scipy = "^1.6.0"
scikit-learn = "0.23.1"
matplotlib = "^3.3.3"
open3d = "^0.12.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.4.3"
flake8 = "^3.8.4"
sphinx-rtd-theme = "^0.5.1"
twine = "^3.3.0"
setuptools = "^52.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "pybind11"]
build-backend = "poetry.core.masonry.api"
